<resources>
    <string name="app_name">ENCARGALO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <!--        OPCIONES DEL MENU                  -->

    <string name="menu_mitienda">MI TIENDA</string>
    <string name="menu_misproductos">MIS PRODUCTOS</string>
    <string name="menu_misordenes">MIS ORDENES</string>
        <string name="mio_menu_detallepedido">DETALLE DEL PEDIDO</string>
        <string name="mio_menu_detalleproducto">DETALLE DEL PRODUCTO</string>
        <string name="mio_menu_conversacion">CONVERSACION</string>
    <string name="menu_mipublicidad">MI PUBLICIDAD</string>
    <string name="menu_miaprendizaje">MI APRENDIZAJE</string>
    <string name="menu_soporte">SOPORTE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- O1 MÓDULO INICIO DE SESIÓN -->

    <!-- is_iniciarsesionprincipal -->
    <string name="is_varstriniciariesionprincipal1">ENVIA TUS PRODUCTOS A MÁS PERSONAS</string>
    <string name="is_varstriniciariesionprincipal2">Continuar con Facebook</string>
    <string name="is_varstriniciariesionprincipal3">Continuar con Google</string>

    <!-- Is_crearunacuenta -->
    <string name="is_varstrcrearunacuenta1">Nombre</string>
    <string name="is_varstrcrearunacuenta2">Apellido</string>
    <string name="is_varstrcrearunacuenta3">Correo</string>
    <string name="is_varstrcrearunacuenta4">Tipo de persona</string>
    <string name="is_varstrcrearunacuenta5">Documento de identidad</string>
    <string name="is_varstrcrearunacuenta6">Téléfono</string>
    <string name="is_varstrcrearunacuenta7">Acepto términos y condiciones y políticas de Privacidad</string>
    <string name="is_varstrcrearunacuenta8">Registrarse</string>

    <string-array name="is_varstrcrearunacuenta9">
        <item>Persona natural</item>
        <item>Persona jurídica</item>
    </string-array>

    <string-array name="is_qpkitemspinnercodpais">
        <item>+1</item>
        <item>+52</item>
        <item>+51</item>
        <item>+54</item>
        <item>+55</item>
        <item>+56</item>
        <item>+57</item>
        <item>+58</item>
        <item>+501</item>
        <item>+502</item>
        <item>+503</item>
        <item>+504</item>
        <item>+505</item>
        <item>+506</item>
        <item>+507</item>
        <item>+591</item>
        <item>+591</item>
        <item>+592</item>
        <item>+595</item>
        <item>+597</item>
        <item>+598</item>
    </string-array>

    <!-- is_verificacioncodigo -->
    <string name="is_varstrverificacioncodigo1">Ingrese el código de verificación</string>
    <string name="is_varstrverificacioncodigo2">Se le ha enviado un código de verificación a tu cuenta de correo</string>
    <string name="is_varstrverificacioncodigo3">Reenviar Código</string>
    <string name="is_varstrverificacioncodigo4">Continuar</string>


    <!-- O2 MÓDULO MIS ÓRDENES -->


    <!-- mio_misordenesprincipal -->

    <string name="mio_varstrmisordenesprincipal1">Buscar id de orden</string>
    <string name="mio_varstrmisordenesprincipal2">Filtrar por estado</string>
    <string name="mio_varstrmisordenesprincipal9">Filtrar por fecha</string>
    <string name="mio_varstrmisordenesprincipal3">ID ORDEN:</string>
    <string name="mio_varstrmisordenesprincipal4">Cliente:</string>
    <string name="mio_varstrmisordenesprincipal5">Órden creada el:</string>
    <string name="mio_varstrmisordenesprincipal6">Órden entregada el:</string>
    <string name="mio_varstrmisordenesprincipal7">Detalle</string>
    <string name="mio_varstrmisordenesprincipal8">Chat</string>
    <string name="mio_varstrmisordenesprincipal10">Estado:</string>

    <string-array name="Filtro_ordenestado">
        <item> Mas antiguo</item>
        <item> Mas Reciente</item>
        <item> Creado</item>
        <item> Preparado</item>
        <item> En reparto</item>
        <item> Entregado</item>
    </string-array>

    <string-array name="Filtro_ordenfecha">
        <item> Fecha inicio</item>
        <item>Fecha fin</item>
    </string-array>

    <!-- mio_detallepedido -->
    <string name="mio_varstrdetallepedido1">Detalle de pedido</string>
    <string name="mio_varstrdetallepedido2">Detalle de pedido N°: </string>

    <string name="mio_varstrdetallepedido4">Nombre del cliente: </string>
    <string name="mio_varstrdetallepedido5">Seleccione repartidor: </string>
    <string name="mio_varstrdetallepedido6">Chat</string>
    <string name="mio_varstrdetallepedido7">Estado del Pedido</string>
    <string name="mio_varstrdetallepedido8">Solicitado</string>

    <string name="mio_varstrdetallepedido9">Acepta/Rechazado</string>
    <string name="mio_varstrdetallepedido10">En Preparación</string>
    <string name="mio_varstrdetallepedido11">En Camino</string>
    <string name="mio_varstrdetallepedido12">Entregado</string>
    <string name="mio_varstrdetallepedido13">Reclamado</string>
    <string name="mio_varstrdetallepedido14">Dirección de entrega</string>
    <string name="mio_varstrdetallepedido15">dirección</string>
    <string name="mio_varstrdetallepedido16">Productos</string>





    <string-array name="repartidores">
        <item>Paolo</item>
        <item>Adrián</item>
    </string-array>

    <!-- mio_detalleproducto -->
    <string name="mio_varstrdetalleproducto1">Detalle pedidos N:</string>
    <string name="mio_varstrdetalleproducto2">Productos:</string>
    <string name="mio_varstrdetalleproducto3">Agua mineral San Carlos 500ml</string>
    <string name="mio_varstrdetalleproducto4">s/1.5 x un</string>
    <string name="mio_varstrdetalleproducto5">1 un s/1.5</string>
    <string name="mio_varstrdetalleproducto6">Rechazar Orden</string>
    <string name="mio_varstrdetalleproducto7">Enviar</string>
    <string name="mio_varstrdetalleproducto8">Precio Total:</string>

    <!-- mio_conversacióncliente-->
    <string name="mio_varstrchatcliente1">CONVERSACIÓN</string>
    <string name="mio_varstrchatcliente2">Cliente</string>
    <string name="mio_varstrchatcliente4">Repartidor</string>
    <string name="mio_varstrchatcliente7">Escribir aqui</string>
    <string name="mio_varstrchatcliente8">Tendero</string>


    <!-- mio_mensajeconfirmación -->
    <string name="mio_varstrmensajeconformacion1">La orden está preparada para enviar</string>
    <string name="mio_varstrmensajeconformacion2">Eso fué rápido!</string>
    <string name="mio_varstrmensajeconformacion3">Volver inicio</string>

    <!-- mio_cancelarorden -->
    <string name="mio_varstrcancelarorden1">¿Seguro que desea cancelar la orden?</string>
    <string name="mio_varstrcancelarorden2">Aceptar</string>
    <string name="mio_varstrcancelarorden3">Cancelar</string>

    <!-- mio_enviarorden -->
    <string name="mio_varstrenviarorden1">¿Seguro que desea enviar los productos al cliente?</string>
    <string name="mio_varstrenviarorden2">Aceptar</string>
    <string name="mio_varstrenviarorden3">Cancelar</string>

    <!-- mio_terminosycondiciones -->
    <string name="is_varstrterminosycondiciones1">Términos y condiciones de uso y Política de privacidad</string>
    <string name="is_varstrterminosycondiciones2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="is_varstrterminosycondiciones3">Cerrar</string>
    <!-- mio_brindarubicaion -->
    <string name="mio_varstrbrindarubicacion1">¿Desea activar su ubicación?</string>
    <string name="mio_varstrbrindarubicacion2">CANCELAR</string>
    <string name="mio_varstrbrindarubicacion3">ACEPTAR</string>

</resources>