<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_margin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/outline_textinputedittext"
        android:orientation="vertical"
        android:layout_marginTop="15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mio_varstrmisordenesprincipal3"
                android:textColor="@color/blackPrimary"
                android:layout_marginLeft="95dp"
                />
            <TextView
                android:id="@+id/mio_moptxtidorden"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="00000000"
                android:layout_marginLeft="5dp"
                />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/mio_varstrmisordenesprincipal10"
                android:textColor="@color/blackPrimary"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:id="@+id/mip_moptxtestado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Estado"
                android:layout_marginLeft="5dp"
                />



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mio_varstrmisordenesprincipal4"
                android:textColor="@color/blackPrimary"
                />

            <TextView
                android:id="@+id/mio_moptxtnombrescliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="00000000"
                android:layout_marginLeft="5dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mio_varstrmisordenesprincipal5"
                android:textColor="@color/blackPrimary"
                android:paddingTop="10dp"/>
            <TextView
                android:id="@+id/mio_moptxtordcreada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="00/00/0000"
                android:layout_marginLeft="10dp"
                android:textColor="@color/blackPrimary"
                android:paddingTop="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingTop="10dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/mio_varstrmisordenesprincipal7"
                android:textColor="@color/green_900"/>
            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:text="@string/mio_varstrmisordenesprincipal8"
                android:textColor="@color/green_900"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>