<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/whitePrimary"

    tools:context=".tendero.Inicio_sesion.ui.Mis_ordenes.mio_frgdetallepedido">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mio_varstrdetallepedido2"
            android:textColor="@color/blackPrimary"
            android:paddingTop="10dp"/>

        <TextView
            android:id="@+id/mio_txtnumpedido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:hint="00000001"
            android:paddingTop="10dp"
            android:textColor="@color/blackPrimary" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/txt_Nombres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mio_varstrdetallepedido4"
        android:textColor="@color/blackPrimary"
        android:layout_margin="5dp"
        android:textSize="16dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/mio_txtLdetalllecliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="Carlos Enrique Quispe"
        android:paddingTop="10dp"
        android:layout_margin="5dp"
        android:textColor="@color/blackPrimary" />

    </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textColor="@color/blackPrimary"
            android:text="@string/mio_varstrdetallepedido5"
            android:layout_marginTop="16dp"
            android:textSize="16dp"
            android:textStyle="bold"/>
        <Spinner
            android:layout_gravity="center"
            android:id="@+id/is_sptipopersona"
            android:layout_width="350dp"
            android:layout_height="42dp"
            android:spinnerMode="dropdown"
            android:layout_marginTop="16dp"
            android:hint="Seleccione repartidor"
            android:entries="@array/repartidores"
            android:gravity="center_horizontal"
            android:background="@drawable/outline_spinner"
            ></Spinner>


    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/mio_dpbtnchat"
            android:layout_width="@dimen/btn_type03_width"
            android:layout_height="match_parent"
            android:text="@string/mio_varstrdetallepedido6"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/outline_chat"
            android:textColor="@color/whitePrimary"/>


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColor="@color/blackPrimary"
        android:text="@string/mio_varstrdetallepedido7"
        android:layout_margin="5dp"
        android:textSize="16dp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5"
        >
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/mio_iconsolicitudcreada"
            android:padding="10dp">
        </ImageView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginBottom="2dp"
            android:text="@string/mio_varstrdetallepedido8"
            android:textColor="@color/blackPrimary"
            android:textSize="15dp"
            android:layout_marginTop="15dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginBottom="2dp"
            android:text="04/09/2022 a las 12:15"
            android:textColor="@color/blackPrimary"
            android:textSize="10dp"
            android:layout_marginTop="15dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5"
        >
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/mio_iconsolicitudnocreada"
            android:padding="10dp">
        </ImageView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginBottom="2dp"
            android:text="@string/mio_varstrdetallepedido9"
            android:textColor="@color/blackPrimary"
            android:textSize="15dp"
            android:layout_marginTop="15dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginBottom="2dp"
            android:text="04/09/2022 a las 12:15"
            android:textColor="@color/blackPrimary"
            android:textSize="10dp"
            android:layout_marginTop="15dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5"
        >
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/mio_iconsolicitudnocreada"
            android:padding="10dp">
        </ImageView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginBottom="2dp"
            android:text="@string/mio_varstrdetallepedido10"
            android:textColor="@color/blackPrimary"
            android:textSize="15dp"
            android:layout_marginTop="15dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginBottom="2dp"
            android:text="04/09/2022 a las 12:15"
            android:textColor="@color/blackPrimary"
            android:textSize="10dp"
            android:layout_marginTop="15dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5"
        >
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/mio_iconsolicitudnocreada"
            android:padding="10dp">
        </ImageView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginBottom="2dp"
            android:text="@string/mio_varstrdetallepedido11"
            android:textColor="@color/blackPrimary"
            android:textSize="15dp"
            android:layout_marginTop="15dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginBottom="2dp"
            android:text="04/09/2022 a las 12:15"
            android:textColor="@color/blackPrimary"
            android:textSize="10dp"
            android:layout_marginTop="15dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5"
        >
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/mio_iconsolicitudnocreada"
            android:padding="10dp">
        </ImageView>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="2"
            android:text="@string/mio_varstrdetallepedido12"
            android:textColor="@color/blackPrimary"
            android:textSize="15dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginBottom="2dp"
            android:text="04/09/2022 a las 12:15"
            android:textColor="@color/blackPrimary"
            android:textSize="10dp"
            android:layout_marginTop="15dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5"
        >
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/mio_iconsolicitudnocreada"
            android:padding="10dp">
        </ImageView>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="2"
            android:text="@string/mio_varstrdetallepedido13"
            android:textColor="@color/blackPrimary"
            android:textSize="15dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginBottom="2dp"
            android:text="04/09/2022 a las 12:15"
            android:textColor="@color/blackPrimary"
            android:textSize="10dp"
            android:layout_marginTop="15dp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/mio_varstrdetallepedido14"
        android:textColor="@color/grey_600"
        android:textSize="16dp"
        android:layout_margin="5dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/mio_dpedtdireccionentrega"
        android:layout_marginLeft="14dp"
        android:background="@drawable/containedbutton_grey"
        android:layout_width="380dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="Calle las Gardenias 1705" />

    <Button
        android:id="@+id/mio_dpbtndetalle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mio_varstrdetallepedido16"
        android:layout_margin="16dp"
        android:background="@drawable/outline_flechaproducto"
        >

    </Button>
</LinearLayout>